<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Achmed Bomber</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen">splash_screen</string>
    <!-- MENU -->
    <string name="single">SINGLE</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="highscore">HIGH SCORES</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>

    <!-- MENU (descriptions para remover os warnings) -->
    <string name="soundonoff">sound on/off</string>
    <string name="menu">Menu</string>

    <!-- LEVELS -->

    <string name="level1">LEVEL 1</string>
    <string name="level2">LEVEL 2</string>
    <string name="level3">LEVEL 3</string>
    <string name="back">BACK</string>

    <!-- PLAYER NAME -->

    <string name="buttonCreatePlayer">Let\'s GO!</string>

    <!-- Multiplayer -->
    <string name="port">9073</string>
    <string name="service_port">9074</string>
    <string name="devices">Peers</string>
    <string name="buttonCreateNewGame">Create Game</string>
    <string name="sergio_name">Sérgio Alves 70515</string>
    <string name="pedro_name">Pedro Camacho 70533</string>
    <string name="bruno_name">Bruno Braga 70590</string>
    <string name="title_activity_absplit">ABSplit</string>
    <string name="buttonSplit">Split</string>
   

</resources>