<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- Background Image -->

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/menu"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/single"
            style="@style/MenuFont"
            android:text="@string/single" />

        <TextView
            android:id="@+id/multiplayer"
            style="@style/MenuFont"
            android:text="@string/multiplayer" />

        <TextView
            android:id="@+id/highscore"
            style="@style/MenuFont"
            android:text="@string/highscore" />

        <TextView
            android:id="@+id/about"
            style="@style/MenuFont"
            android:text="@string/about" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <ImageButton
                android:id="@+id/soundon"
                android:contentDescription="@string/soundonoff"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@raw/soundon" />

            <TextView
                android:id="@+id/exit"
                style="@style/ExitFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/exit" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>