<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="8" >

    <TextView
        android:id="@+id/dev_sergio"
        style="@style/MenuFont"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/sergio_name" />

    <TextView
        android:id="@+id/dev_pedro"
        style="@style/MenuFont"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/pedro_name" />

    <TextView
        android:id="@+id/dev_bruno"
        style="@style/MenuFont"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/bruno_name" />

    <TextView
        android:id="@+id/about_back"
        style="@style/MenuFont"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/back" />

</LinearLayout>