<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="Level Menu"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/level1"
            style="@style/MenuFont"
            android:text="@string/level1" />

        <TextView
            android:id="@+id/level2"
            style="@style/MenuFont"
            android:text="@string/level2" />

        <TextView
            android:id="@+id/level3"
            style="@style/MenuFont"
            android:text="@string/level3" />
        
        <TextView
            android:id="@+id/back"
            style="@style/MenuFont"
            android:text="@string/back" />

    </LinearLayout>

</RelativeLayout>